--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     rel="stylesheet" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#9C27B0" />
+  <link rel="manifest" href="/manifest.json" />
   <title>Izhaar ❤️</title>
 </head>
 
